# ssgz

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  Dioxus.toml  README.md  asm.sh  asm_debug.sh  colorReplace.py  convert_saves.py  customNP.rel  extractmanager.py  pyproject.toml  ss-practice.py  ss-practice.spec
.github/workflows/: build.yaml
asm/: assemble.bat  assemble_jp.py  assemble_us.py  gen_dol_rel_info.py  patcher.py  relmapper.py  to_lst.py
asm/custom-functions/: Cargo.toml  build_test.sh  merge.ld  powerpc-unknown-eabi.json  relmapper.py  rust-toolchain.toml
asm/custom-functions/src/: dynamic.rs  lib.rs  static.rs
asm/custom-functions/src/game/: actor.rs  events.rs  file_manager.rs  flag_managers.rs  player.rs  reloader.rs  save_file.rs  stage_info.rs
asm/custom-functions/src/live_info/: flag_info.rs  frame_viewer.rs  heap_viewer.rs  input_viewer.rs  link_pos_viewer.rs  mod.rs
asm/custom-functions/src/menus/: action_menu.rs  cheats_menu.rs  display_menu.rs  flag_menu.rs  heap_menu.rs  inventory_menu.rs  main_menu.rs  mod.rs  practice_saves_menu.rs  tricks_menu.rs  warp_menu.rs
asm/custom-functions/src/system/: button.rs  heap.rs
asm/custom-functions/src/utils/: char_writer.rs  console.rs  menu.rs  mod.rs  practice_saves.rs
asm/custom_symbols/: jp.txt  us.txt
asm/free_space_start_offsets/: jp.txt
asm/original_symbols/: jp.lst  jp.txt  to_lst.py  us.lst  us.txt
asm/patch_diffs/jp/: ss_necessary_diff.txt
asm/patch_diffs/us/: ss_necessary_diff.txt
asm/patches/jp/: ss_necessary.asm
asm/patches/us/: ss_necessary.asm
assets/: GZIcon.icns  gz.css
custom-rel/JP/: customNP.rel
custom-rel/US/: customNP.rel
practice-saves/JP/saves/100 v5_1_3/After Skippers/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/After Tadtones/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/Ballad RBM/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/Cistern RBW/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/ET Door RBM/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/Eldin RBW/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/FS Flame Wall RBM/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/Fi Escort/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/Gate of Time RBM/: wiiking2.sav
practice-saves/JP/saves/100 v5_1_3/Levias/: wiiking2.sav
src/: dol.rs  gui.rs  hex_literal.rs  iso_tools.rs  main.rs  patch_loader.rs  patcher.rs  paths.rs  riider.rs  updater.rs
sslib/: __init__.py
(+362 files in other folders)
