[package]
name = "custom-functions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["staticlib"]

[features]
default = []
static = []
dynamic = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
bitflags = "2.4.1"
cstr = "0.2.11"
panic-abort = "0.3.2"
wchar = "0.11.0"
