[package]
name = "custom-functions"
version = "0.2.1"
edition = "2021"

[lib]
crate-type=["staticlib"]

# Required so the asm scripts don't try to compile / format the patcher code
[workspace]
exclude = ["ssgz"]

[features]
default = []
static = []
dynamic = []
debug_dyn = ["dynamic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
bitflags = "2.4.1"
cstr = "0.2.11"
panic-abort = "0.3.2"
wchar = "0.11.0"
