[package]
name = "custom-functions"
version = "0.3.1"
edition = "2021"

[lib]
crate-type=["staticlib"]

# Required so the asm scripts don't try to compile / format the patcher code
[workspace]
exclude = ["ssgz"]

# Dynamic is enabled by default for rust-analyzer purposes. The build scripts will manually choose the right feature
# You may change this to static or debug_dyn if you want to analyze that code instead.
[features]
default = ["dynamic"]
static = []
dynamic = []
debug_dyn = ["dynamic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
bitflags = "2.4.1"
cstr = "0.2.11"
panic-abort = "0.3.2"
wchar = "0.11.0"
